package seedu.planner.model.programmes;

public enum DegreeType {
    MAJOR,
    MINOR
}
